[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "HMRSsim"
version = "0.0.1-3"
readme = "README.md"
description = "Lightweight, modular multi-robot simulator"

[dependencies]
pyyaml = "^5.3.0"
click = "^8.0.0"
pyrebase = '^3.0'
python-dotenv = '*'
esper = "1.3"
collision = "1.2.2"
simpy = "^4.0"
