[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "HMRsim_lesunb"
version = "0.0.1-3"
license = {text = "GPLv3"}
readme = "README.md"
description = "Lightweight, modular multi-robot simulator"
requires-python = ">=3.8"

dependencies = [
   "pyyaml >= 5.3.0",
   "click >= 8.0.0",
   "pyrebase >= 3.0.27",
   "python-dotenv >= 0.19.2",
   "esper == 1.3",
   "collision == 1.2.2",
   "simpy >= 4.0",
   "colorama >= 0.4.4",
   "pyglet >= 1.5.22",
]

[project.urls]
homepage = "https://github.com/lesunb/HMRSsim"
repository = "https://github.com/lesunb/HMRSsim"
documentation = "https://github.com/lesunb/HMRSsim/wiki"

