[metadata]
name = HMRsim_lesunb
version = 0.0.1-3
author = Gguidini, CristianeNaves, gabrielsr
author_email = giovanni.guidini@gmail.com
description = Lightweight, modular multi-robot simulator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lesunb/HMRSsim
project_urls =
    Bug Tracker = https://github.com/lesunb/HMRSsim/issues
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    hmrsimcli = simulator.hmrsim_cli:main
